fix text and indicator alignment

--- a/src/scss/04_Components/_dropdown.scss
+++ b/src/scss/04_Components/_dropdown.scss
@@ -6,7 +6,6 @@
 
     &.mega-menu {
         display: block;
-        float: left;
         position: static;
         width: 100%;
     }
@@ -18,6 +17,7 @@
 
         .button-text {
             display: flex;
+            align-items: center;
 
             .dropdown-icon {
                 @include ml(sm);
@@ -65,7 +65,7 @@
             a,
             button {
                 @include hover-focus {
-                    @include bg-color(light, light);
+                    background-color: color(light, light);
                 }
             }
         }
@@ -88,7 +88,6 @@
         left: 0;
         right: 0;
         max-width: 100%;
-        max-height: 80vh;
         min-width: 200px;
         overflow-y: auto;
         z-index: z(xs);
@@ -104,7 +103,6 @@
         .contents {
             display: block;
             width: auto;
-            min-width: 100%;
             @include border();
             @include py(sm);
             @include transition-ease-in-out(fast);
